--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node src/index.ts",
+    "build": "tsc -p .",
+    "start": "npm run build && npm run dev",
+    "start-app": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,10 +21,8 @@
   },
   "homepage": "https://github.com/rahatsaini/mudbath-coffee#readme",
   "dependencies": {
-    "nodemon": "^2.0.15",
+    "@types/node": "^17.0.8",
+    "@types/nodemon": "^1.19.1",
     "typescript": "^4.5.4"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.8"
   }
 }
