--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/rahatsaini/mudbath-coffee#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "@types/nodemon": "^1.19.1",
+    "lodash": "^4.17.21",
     "typescript": "^4.5.4"
   }
 }
