--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/rahatsaini/mudbath-coffee#readme",
   "dependencies": {
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "@types/nodemon": "^1.19.1",
+    "jest": "^27.4.7",
     "lodash": "^4.17.21",
     "typescript": "^4.5.4"
   }
