--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && npm run dev",
     "start-app": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "@types/nodemon": "^1.19.1",
     "jest": "^27.4.7",
     "lodash": "^4.17.21",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
 }
