--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p .",
-    "start": "npm run build && npm run dev",
+    "start": "npm run build && npm run test && npm run dev",
     "start-app": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "test": "jest"
